# voxEngine

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  imgui.ini
.github/workflows/: cmake-multi-platform.yml  main.yml
include/: camera.hpp  debug.hpp  engine.hpp  entity.hpp  gpuCompute.hpp  main.hpp  model.hpp  physics.hpp  player.hpp  shader.hpp  shaders.hpp  temp.hpp  ui.hpp  world.hpp
models/: chunkBorder.model  pointsOfChunk.model  testModel.model
shaders/: debugFrag.frag  debugVert.vert  frag.glsl  fragment.frag  fragment.glsl  testComp.comp  textFrag.frag  textFrag.glsl  textVert.glsl  textVert.vert  vertex.glsl  vertex.vert  vertexWithOutSizeScaling.glsl  vertexWithSizeScaling.glsl
src/: camera.cpp  camera.rs  common.rs  debug.cpp  debug.rs  engine.cpp  engine.rs  entity.cpp  entity.rs  gpuCompute.cpp  main.cpp  main.rs  model.cpp  perlin.rs  physics.cpp  physics.rs  player.cpp  player.rs  shader.cpp  shaders.cpp  temp.cpp  ui.cpp  world.cpp  world.rs
